@@ -4,7 +4,8 @@ Changelog
 2.0.3 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Set reply-to to customer for shop-owner and supplier mails.
+  [jone]
 
 
 2.0.2 (2014-08-13)
